syntax = "proto3";


option go_package = "pickrewardapi/internal/application/bank/proto";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package bank.v1;

service BankV1 {
  rpc GetAllBanks (AllBanksReq) returns (BanksReply) {}
}


message Reply {
  int32 status = 1;
  Error error = 2;
}


message Error {
  int32 errorCode = 1;
  string errorMessage = 2;
}


message AllBanksReq {}

message BanksReply {

  message Bank {
    string id = 1;
    string name = 2;
    int32 order = 3;
    int32 bankStatus = 4;
  }

  Reply reply = 1;
  repeated Bank banks = 2;
}
